# Pdf_insights_Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/api/: dependencies.py
backend/api/routes/: analysis.py  documents.py  health.py
backend/chains/: analysis_chains.py  prompts.py
backend/core/: config.py  exceptions.py  logging.py
backend/models/: schemas.py
backend/services/: analysis_service.py  document_store.py  llm_factory.py  pdf_service.py  rag_service.py  text_service.py
frontend/: api_client.py  app.py
tests/: conftest.py  test_api.py  test_chains.py  test_document_store.py  test_pdf_service.py  test_text_service.py
